cabal-version:      3.4
name:               IoQueue
version:            0.1.0.0

license:            BSD-3-Clause
license-file:       LICENSE

author:             amanfreecs
maintainer:         aman.hobo@gmail.com

category:           Control
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common flags
    ghc-options: -Wall -O3 -threaded -with-rtsopts=-N10

library
    exposed-modules:
        IoQueue,
        Server.IoServer
    build-depends:
        base,
        bytestring >= 0.12.0,
        binary >= 0.8.9.0,
        network >= 3.2.7
    ghc-options: -staticlib -O3
    hs-source-dirs:   src
    default-language: GHC2021

executable IoQueue
    import:           flags
    main-is:          Main.hs
    build-depends:
        base,
        IoQueue >= 0.1.0.0
    hs-source-dirs:   exe
    default-language: GHC2021
